--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
 
     <footer>
-        <h5>Created by: Luisa Sánchez</h5>
+        <h5>Dedicated to My love Roger Hernández</h5>
         <p>2025</p>
     </footer>
 
